2003/11/25 12:02 (-0500) muppetman

	* GType.xs: clean up some odd leaks; use proper contexts in the
	signal accumulator and custom class closure.

2003/11/25 11:39 (-0500) rwmcfa1
	
	* GType.xs, devel.pod:	link correction

	* GenPod.pm: added parents return from list ancestors. use it for 
	podify_see_alsos, which is new. and added get_copyright

	* Glib.pm: removed reference to old Glib::PkgConfig

	* MakeHelper.pm: added new DOC_PL_DEPENDS var, should prove useful 
	for includes

	* ParseXSDoc.pm: added include system =for include file, 
	=for include !cmd

2003/11/24 23:35 (-0500) rwmcfa1

	* Makefile.PL, MakeHelper.pm: clean up and resolution of issues about
	xsapi.pod.

2003/11/21 02:12 (-0500) muppetman

	* Glib.pm, README: bump version to 1.012 and release.

2003/11/21 01:00 (-0500) muppetman

	* GBoxed.xs: implement a generic Glib::Boxed::copy, and some doc

	* GBoxed.xs, GObject.xs, GType.xs, GValue.xs, typemap: replace
	SvTRUE() with SvOK() as a more efficient test for definedness.
	SvTRUE() is rather heavy, in that it evaluates to an awful lot
	of code, where what we generally need is just to see if the scalar
	is the Perl equivalent of C's NULL.

	* GParamSpec.xs: now that there's a gunichar typemap, implement
	things that were waiting on it.  not sure why you'd want a unichar
	param in perl, but the point is to make it possible.  :-)

2003/11/19 14:08 (-0500) muppetman

	cleanup for win32:

	* GType.xs: hush some warnings from msvc

	* MakeHelper.pm: if we're using cl, use its weird command switch
	to put the object files in the right place... /Fo<file>

	* Glib.exports: added some missing symbols

2003/11/18 17:21 (-0500) muppetman

	* Glib.xs: use GPerlFilename_const in the right place to hush the
	compiler.  also use the length returned from g_filename_(to|from)_utf8
	to avoid having  to call strlen() in gperl_sv_from_filename and
	gperl_filename_from_sv.

2003/11/18 01:09 (-0500) muppetman
