@@ -133,7 +133,7 @@ Use this in your MY::postamble to enable autogeneration of POD.
 This updates dependencies with the list of pod names generated by an earlier
 run of C<do_pod_files>.
 
-There is a special Makefile variable DOC_PL_DEPENDS that should be set to the
+There is a special Makefile variable POD_DEPENDS that should be set to the
 list of files that need to be created before the doc.pl step is run, include
 files.
 
@@ -144,14 +144,14 @@ sub postamble_docs
 	my @xs_files = @_;
 "
 # documentation stuff
-build/doc.pl :: Makefile @xs_files \$(DOC_PL_DEPENDS)
+build/doc.pl :: Makefile @xs_files
 	$^X -I \$(INST_LIB) -I \$(INST_ARCHLIB) -MGlib::ParseXSDoc \\
 		-e 'xsdocparse (".join(", ",map {"\"$_\""} @xs_files).")' > \$@
 
 # passing all of these files through the single podindex file, which is 
 # created at the same time, prevents problems with -j4 where xsdoc2pod would 
 # have multiple instances
-@gend_pods :: build/podindex
+@gend_pods :: build/podindex \$(POD_DEPENDS)
 
 build/podindex :: Makefile build/doc.pl \$(INST_LIB)/\$(FULLEXT).pm \$(INST_DYNAMIC)
 	$^X -I \$(INST_LIB) -I \$(INST_ARCHLIB) -MGlib::GenPod -M\$(NAME) \\
